--- a/style.css
+++ b/style.css
@@ -18,6 +18,153 @@ body {
   height: 100%;
 }
 
+body {
+  font-family: "Kumbh Sans", sans-serif;
+  background-color: var(--Cyan);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  padding: 1.5rem;
+  overflow: hidden;
+}
+
+.background-top,
+.background-bottom{
+  position: absolute;
+}
+
+.background-top{
+  width: 23rem;
+  height: 26rem;
+  top: -10rem;
+  left: -11rem;
+  opacity: 0.5;
+}
+
+.background-bottom{
+  width: 35rem;
+  height: 35rem;
+  bottom: -9rem;
+  right: -20rem;
+}
+
+main {
+  position: relative;
+  width: 100%;
+  max-width: 22rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 2rem 0;
+}
+
+.top-part {
+  width: 100%;
+  height: 9rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-image: url(images/bg-pattern-card.svg);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.top-part img {
+  width: 7rem;
+  position: absolute;
+  bottom: -3rem;
+  border: 6px solid white;
+  border-radius: 50%;
+}
+
+.bottom-part {
+  width: 100%;
+  height: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  background-color: white;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.bottom-part .top {
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: var(--Dark-Blue);
+  margin: 2rem 0 0 0;
+}
+
+.bottom-part .top h2 {
+  margin: 0 0 1rem 0;
+}
+
+.bottom-part .top span {
+  font-weight: 400;
+  color: var(--Gray-Blue);
+  margin: 0 0 0 0.5rem;
+}
+
+.bottom-part > .middle {
+  margin: 0 0 4rem 0;
+}
+
+.bottom-part > .middle p {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: var(--Gray-Blue);
+}
+
+.bottom-part .bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.bottom-part .bottom h3 {
+  font-weight: 700;
+  color: var(--Dark-Blue);
+  margin: 0 0 0.5rem 0;
+}
+
+.bottom-part .bottom .left,
+.bottom-part .bottom .middle,
+.bottom-part .bottom .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.bottom-part .bottom p {
+  font-size: 0.7rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--Dark-Gray);
+}
+
+@media(min-width:40.5rem){
+  .background-top{
+    width: 50rem;
+    height: 50rem;
+    top: -25rem;
+    left: -5rem;
+    opacity: 1;
+  }
+  
+  .background-bottom{
+    width: 50rem;
+    height: 50rem;
+    bottom: -23rem;
+    right: -5rem;
+  }
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
